// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminHeader > matches snapshot when authenticated 1`] = `
<div>
  <header
    class="sticky top-0 z-20 border-b border-ink bg-white backdrop-blur px-5"
  >
    <div
      class="container-page flex flex-wrap items-center justify-between gap-4 py-2 md:py-4"
    >
      <a
        class="flex items-center gap-3"
        data-discover="true"
        href="/admin"
      >
        <div
          class="text-left leading-tight"
        >
          <p
            class="text-[11px] uppercase tracking-[0.25em] text-slate-500"
          >
            Admin
          </p>
          <p
            class="font-display text-lg font-semibold text-ink"
          >
            The Builder
          </p>
        </div>
      </a>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <button
          class="ant-dropdown-trigger font-semibold flex flex-row items-center gap-2"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-user lucide-user-circle"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
            <path
              d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"
            />
          </svg>
          <span>
            Test Admin
          </span>
        </button>
      </div>
    </div>
  </header>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;

exports[`AdminHeader > matches snapshot when not authenticated 1`] = `
<div>
  <header
    class="sticky top-0 z-20 border-b border-ink bg-white backdrop-blur px-5"
  >
    <div
      class="container-page flex flex-wrap items-center justify-between gap-4 py-2 md:py-4"
    >
      <a
        class="flex items-center gap-3"
        data-discover="true"
        href="/admin"
      >
        <div
          class="text-left leading-tight"
        >
          <p
            class="text-[11px] uppercase tracking-[0.25em] text-slate-500"
          >
            Admin
          </p>
          <p
            class="font-display text-lg font-semibold text-ink"
          >
            The Builder
          </p>
        </div>
      </a>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-oc1rc0 css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house lucide-home"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </header>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;
